--- a/BeneluxWebb/static/css/pages/base.css
+++ b/BeneluxWebb/static/css/pages/base.css
@@ -1,5 +1,5 @@
 :root {
-    --max-width-content: 1500px;
+    --max-width-content: 1300px;
 }
 
 /* === General styling === */
@@ -12,6 +12,11 @@ html, body {
 body {
     background-color: var(--background);
     color: var(--foreground);
+}
+
+a {
+    color: var(--text);
+    text-decoration: none;
 }
 
 .page-wrapper {
