--- a/BeneluxWebb/templates/partials/_esea_season.html
+++ b/BeneluxWebb/templates/partials/_esea_season.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/pages/esea/esea_card_details.css') }}">
 
 <link rel="stylesheet" href="{{ url_for('static', filename='css/components/table.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/components/match_box.css') }}">
 {% endblock %}
 
 {% block extra_js %}
