--- a/BeneluxWebb/templates/esea.html
+++ b/BeneluxWebb/templates/esea.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 {% extends "base.html" %}
 
+{% from "macros/match_box.html" import match_box %}
+
 {% block extra_css %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/pages/esea/esea.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/pages/esea/esea_sidebar.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/pages/esea/esea_cards.css') }}">
+
+<link rel="stylesheet" href="{{ url_for('static', filename='css/components/match_box.css') }}">
 {% endblock %}
 
 {% block title %}ESEA{% endblock %}
@@ -67,57 +71,45 @@
     </div>
   </div>
   <div class="sidebar right">
-    <div class="todays-matches">
-      <div class="todays-matches-header">
-        Today's Matches
-      </div>
-      <div class="todays-matches-content">
-        {% if todays_matches %}
-          {% for division, matches in todays_matches.items() %}
-            <div class="todays-matches-division">
-              {{ division }}
-            </div>
-            {% for match in matches %}
-              <a class="todays-match-box {{ 'highlight-border' if match.opponent.is_benelux else '' }}" 
-                href="https://www.faceit.com/en/cs2/room/{{ match.match_id }}" 
-                target="_blank", 
-                rel="noopener noreferrer">
 
-                  <div class="team team-left {{ 'highlight-text' if match.team.is_benelux else '' }}">
-                    <span>{{ match.team.team_name }}</span>
-                  </div>
-                  {% if match.status == 'FINISHED' %}
-                    <div class="match_time">
-                      <span>{{ match.status }}</span>
-                    </div>
-                  {% elif match.status == 'SCHEDULED' %}
-                    <div class="match-time">
-                      <span>{{ match.match_time | datetimeformat('%H:%M') }}</span>
-                    </div>
-                  {% elif match.status == 'ONGOING' %}
-                    {% if match.score %}
-                      <div class="match-time">
-                        <span>LIVE: {{ match.score[match.team.team_id] | default(0) }} / {{ match.score[match.opponent.team_id] | default(0) }}</span>
-                      </div>
-                    {% else %}
-                      <div class="match_time">
-                        <span>{{ match.status }}</span>
-                      </div>
-                    {% endif %}
-                  {% else %}
-                    <div class="match_time">
-                      <span>{{ match.status }}</span>
-                    </div>
-                  {% endif %}
-                  <div class="team team-right {{ 'highlight-text' if match.opponent.is_benelux else '' }}">
-                    <span>{{ match.opponent.team_name }}</span>
-                  </div>
-              </a>
+    <div class="sidebar-content">
+      <div class="sidebar-header">
+        <span> Benelux Clashes </span>
+      </div>
+      <div class="sidebar-body">
+        {% if has_benelux_matches %}
+          {% for division, matches in benelux_matches.items() %}
+            {% for match in matches %}
+              {{ match_box(division, match) }}
             {% endfor %}
           {% endfor %}
         {% else %}
-          <div class="text-muted">No matches scheduled for today.</div>
+          <div class="text-muted"> No upcoming Benelux clashes :( </div>
         {% endif %}
+        
+      </div>
+    </div>
+
+    <div class="sidebar-content">
+      <div class="sidebar-header">
+        <span> Today's Matches </span>
+      </div>
+      <div class="sidebar-body">
+        {% if has_todays_matches %}
+          {% for division, matches in todays_matches.items() %}
+            {% if matches %}
+              <div class="todays-matches-division">
+                {{ division }}
+              </div>
+              {% for match in matches %}
+                {{ match_box(division, match) }}
+              {% endfor %}
+            {% endif %}
+          {% endfor %}
+        {% else %}
+          <div class="text-muted"> No matches scheduled for today. </div>
+        {% endif %}
+      </div>
     </div>
   </div>
 </div>
